# SimuStock

./: Cargo.toml  README.md  final_prices_20251117_024547.csv  simulation_paths_20251117_024547.csv  simulation_summary_20251117_024547.csv
app_gui/: Cargo.toml
app_gui/src/: app_logic.rs  charts.rs  main.rs
app_gui/ui/: main.slint
core_sim/: Cargo.toml
core_sim/src/: bootstrap.rs  gbm.rs  lib.rs  simulation.rs
data_io/: Cargo.toml
data_io/src/: csv_loader.rs  lib.rs  statistics.rs  stock_price.rs
