[package]
name = "app_gui"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "gui"
path = "src/main.rs"

[dependencies]
slint = "1.8"
plotters = "0.3"
plotters-bitmap = "0.3"
image = "0.24"
chrono = { version = "0.4", features = ["serde"] }
data_io = { path = "../data_io" }
core_sim = { path = "../core_sim" }
anyhow = "1.0"
tokio = { version = "1.0", features = ["full"] }

[build-dependencies]
slint-build = "1.8"